--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/psteide93/js-modules-exercise/issues"
   },
-  "homepage": "https://github.com/psteide93/js-modules-exercise#readme"
+  "homepage": "https://github.com/psteide93/js-modules-exercise#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
