--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "js-modules-exercise",
   "version": "1.0.0",
   "description": "* Add a folder called `utilities` * In this folder, add a file called `difference.js` * In this file, import the function `difference` from the [`lodash`](https://www.npmjs.com/package/lodash) package on npm. Note that you'll also need to set up a node project and install Lodash for this to work. * Write a function that accepts two arrays, and uses the `difference` function to return the string \"The difference between `[1, 2, 3]` and `[2, 3, 4]` is `[1, 4]`\", where `[1, 2, 3]` is taken from the contents of the first array, `[2, 3, 4]` is taken from the contents of the second array, and `[1, 4]` is the taken from the result of passing the two arrays into `difference`. * Export this function as a default export. * In the existing `index.js` file, import this function. * Use the function to get the difference string for the two arrays included there. Put this string in the element in `index.html` with the id of \"target.\" * Use [Parcel](https://parceljs.org/) or another module bundler to serve up the site.",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"parcel",
     "build": "parcel build index.html"
   },
   "repository": {
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/psteide93/js-modules-exercise#readme",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "parcel": "^2.5.0"
   },
-  "type" :"module"
+  "type": "module"
 }
